// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Parent > mount 1`] = `
<div>
  <h1
    class="parent"
  >
    Parent
  </h1>
  <div>
    <h1>
      Child
    </h1>
  </div>
</div>
`;

exports[`Parent > shallowMount 1`] = `
<div>
  <h1
    class="parent"
  >
    Parent
  </h1>
  <child-stub />
</div>
`;
